--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Portfolio of tools developed by Luis Caballero Ramos"    
 authors = [{ name = "Luis Caballero Ramos", email = "luiscaballeroramos@gmail.com" }]
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.9,<3.9.7 || >3.9.7"
 
 dependencies = [
     "streamlit==1.45.1",
