--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     #"lcr_code @ git+https://github.com/luiscaballeroramos/lcr_code.git"
 ]
 
+packages = [{ include = "portfolio" }]
+
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
