--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,7 @@ readme = "README.md"
 requires-python = ">=3.9,!=3.9.7"
 
 dependencies = [
-    "streamlit==1.45.1",
-    "lcr_code @ git+https://github.com/luiscaballeroramos/lcr_code.git"
+    "streamlit==1.45.1"
 ]
 
 [build-system]
