--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 requires-python = ">=3.9,!=3.9.7"
 
 dependencies = [
-    "streamlit==1.45.1"
+    "streamlit==1.45.1",
     "matplotlib>=3.5",
     "numpy>=1.21",
 ]
@@ -15,3 +15,7 @@ dependencies = [
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
+
+[tool.setuptools]
+packages = ["portfolio"]
