--- a/.github/workflows/keepstreamlitalive.yml
+++ b/.github/workflows/keepstreamlitalive.yml
@@ -2,22 +2,20 @@ name: Keep Streamlit App Awake
 
 on:
   schedule:
-    - cron: "*/10 * * * *"  # Ejecuta cada 10 minutos
-  workflow_dispatch:  # Permite ejecutarlo manualmente desde GitHub
+    - cron: "*/10 * * * *"  # cada 10 minutos
+  workflow_dispatch:
 
 jobs:
   ping:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Ping Streamlit app (follow redirects safely)
+      - name: Ping Streamlit app using wget
         run: |
-          echo "Pinging Streamlit app..."
-          curl -L -A "Mozilla/5.0 (compatible; GitHubActionBot/1.0)" \
-               --max-redirs 10 \
-               --connect-timeout 15 \
-               --retry 3 \
-               --retry-delay 5 \
-               --fail \
-               https://luiscaballeroramos.streamlit.app/ \
-               -o /dev/null
+          echo "Pinging Streamlit app with wget..."
+          wget --quiet --tries=3 --timeout=20 \
+               --user-agent="Mozilla/5.0 (compatible; GitHubActionBot/1.0)" \
+               --no-cache \
+               https://luiscaballeroramos.streamlit.app/?embed=true \
+               -O /dev/null
+
